Bug 516778 - PLM doesn't inherit the keyboard layouts from the Settings - no way to add custom layouts
Summary: PLM doesn't inherit the keyboard layouts from the Settings - no way to add cu...
Status: RESOLVED FIXED
Alias: None
Product: plasma-login-manager
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.6.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-27 05:45 UTC by Angel Parra
Modified: 2026-04-03 00:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Angel Parra 2026-02-27 05:45:15 UTC
SUMMARY
The keyboard layouts are not applied to PLM with the "Apply Plasma settings", leaving PLM with no way to effortlessly set the keyboard layouts.

STEPS TO REPRODUCE
1. Have a bunch of custom keyboard layouts
2. "Apply Plasma Settings" on PLM's kcm
3. Logout

OBSERVED RESULT
No custom keyboard layouts added and no way to change them from the KCM

EXPECTED RESULT
Either layouts should be inherited or the kcm should provide a way to manage the keyboard layouts

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.6.1
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2

ADDITIONAL INFORMATION
Comment 1 David Edmundson 2026-03-29 09:32:23 UTC
If you need a workaround it should parse global xkb config or fallback to 'localectl set-keymap'

But we should probably sync kxkbrc
Comment 2 Bug Janitor Service 2026-03-31 15:20:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-login-manager/-/merge_requests/122
Comment 3 Oliver Beard 2026-03-31 15:41:05 UTC
Git commit e60bbe7b7e3b320b5ec1b16d2167135507812035 by Oliver Beard.
Committed on 31/03/2026 at 15:40.
Pushed by olib into branch 'master'.

frontend/kcm: Sync keyboard layouts

Include .config/kxkbrc in KCM settings synchronisation.
FIXED-IN: 6.7

M  +5    -0    src/frontend/kcm/auth/plasmaloginauthhelper.cpp
M  +2    -0    src/frontend/kcm/kcm.cpp
M  +1    -1    src/frontend/kcm/ui/main.qml

https://invent.kde.org/plasma/plasma-login-manager/-/commit/e60bbe7b7e3b320b5ec1b16d2167135507812035