frontend/kcm: Sync keyboard layouts

Include .config/kxkbrc in KCM settings synchronisation.

BUG: 516778
FIXED-IN: 6.7