src/frontend/kcm/auth/sonicloginauthhelper.cpp
@@ -121,6 +121,8 @@ ActionReply SonicLoginAuthHelper::sync(const QVariantMap &args)
 
     createConfigFile(QStringLiteral("fontconfig/fonts.conf"));
 
+    createConfigFile(QStringLiteral("kxkbrc"));
+
     return ActionReply::SuccessReply();
 }
 
@@ -156,6 +158,9 @@ ActionReply SonicLoginAuthHelper::reset(const QVariantMap &args)
 
     QFile kwinoutputconfigFile(homeDir + QStringLiteral("/.config/") + QStringLiteral("/kwinoutputconfig.json"));
     kwinoutputconfigFile.remove();
+
+    QFile kxkbrcFile(homeDir + QStringLiteral("/.config/") + QStringLiteral("/kxkbrc"));
+    kxkbrcFile.remove();
 
     return ActionReply::SuccessReply();
 }
